# llm-rs

./: .gitignore  CLAUDE.md  Cargo.toml  IDEAS.md  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_LICENSES  build.rs
examples/: bench_gemm.rs  bench_q4k_gemm.rs  bench_q4k_gemv.rs  bench_throughput.rs
scripts/: capture_q4k.sh  profile.py
shaders/: ops.metal
src/: batch.rs  kv_pool.rs  lib.rs  main.rs  model.rs
src/arch/: llama.rs  mod.rs  qwen3.rs  qwen35.rs
src/backend/: mod.rs
src/backend/cpu/: mod.rs
src/backend/metal/: mod.rs
src/cli/: mod.rs
src/gguf/: metadata.rs  mod.rs
src/kv_cache/: mod.rs
src/model/: llama.rs  mod.rs
src/sampler/: mod.rs
src/serve/: api.rs  engine.rs  mod.rs  scheduler.rs
src/tensor/: mod.rs
src/tokenizer/: bpe.rs  mod.rs
tests/: ops.rs
