[package]
name = "llm-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["metal"]
metal = ["dep:objc2", "dep:objc2-metal", "dep:objc2-foundation"]

[dependencies]
clap = { version = "4", features = ["derive"] }
byteorder = "1"
half = { version = "2", features = ["bytemuck"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-metal = { version = "0.3", optional = true }
objc2-foundation = { version = "0.3", optional = true, features = ["NSString", "NSError", "NSURL", "NSData"] }
