[package]
name = "llm-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
byteorder = "1"
half = { version = "2", features = ["bytemuck"] }
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-core = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }


[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-metal = { version = "0.3", features = [
    "MTLDevice", "MTLResource", "MTLBuffer", "MTLLibrary",
    "MTLComputePipeline", "MTLCommandQueue", "MTLCommandBuffer",
    "MTLCommandEncoder", "MTLComputeCommandEncoder", "MTLTypes",
] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSError", "NSURL", "NSData"] }
